<resources>
    <string name="app_name">Health Track</string>
    <string name="home_welcome_message">Welcome to Health Track</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete account</string>
    <string name="logout">Logout</string>
    <string name="username_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register">Register</string>
    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_account">Account</string>
    <string name="menu_register">Register</string>
    <string name="menu_exercise">Exercises</string>
    <string name="menu_progress">Progress</string>
    <string name="home_description">Your app to track your physical activities and stay in shape.</string>
    <string name="maps">Maps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="notes">Notes</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="ajouter_une_note">Ajouter une Note :</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string-array name="languages">
        <item>Francais</item>
        <item>English</item>
    </string-array>
    <string name="category_all">All the categories</string>
    <string name="category_legs">Legs</string>
    <string name="category_glutes">Glutes</string>
    <string name="category_abs">Abs</string>
    <string name="category_arms">Arms</string>
    <string name="category_pecs">Pecs</string>
    <string name="category_shoulders">Shoulders</string>
    <string name="buttonPhoto">Take a photo</string>
    <string name="favoris">Favoris</string>
    <string name="health_track">HEALTH TRACK</string>
    <string name="sport_is_life">Sport is life</string>
    <string name="enter_photo_description">Enter photo description</string>
    <string name="hide">Hide</string>
    <string name="delete">Delete</string>
    <string name="nombre_sets">Nombre Sets</string>
    <string name="nombre_reps">Nombre Reps</string>
    <string name="muscle_groups">Muscle Groups</string>
    <string name="connexion">Connexion</string>
    <string name="login_guest">Login as guest</string>
    <string name="remind">Reminder</string>
    <string name="remind_evolution">You need to take your daily photo to visually track your physical evolution.</string>
    <string name="email_adress_to_enter">Email adress :</string>
    <string name="username_to_enter">Username :</string>
    <string name="password_to_enter">Password :</string>
    <string name="confirm_password_to_enter">Confirm password :</string>
    <string name="exercise_squats">Squats</string>
    <string name="exercise_squats_description">Exercise for legs</string>
    <string name="exercise_push_ups">Push-ups</string>
    <string name="exercise_push_ups_description">Exercise for arms and chest</string>
    <string name="exercise_crunches">Crunches</string>
    <string name="exercise_crunches_description">Exercise for abdominals</string>
    <string name="exercise_developpe_arnold_haltere">Dumbbell Arnold Press</string>
    <string name="exercise_developpe_arnold_haltere_description">Exercise for shoulders</string>
    <string name="exercise_developpe_couche_prise_inversee">Incline Bench Press</string>
    <string name="exercise_developpe_couche_prise_inversee_description">Exercise for chest</string>
    <string name="exercise_dips_barres_paralleles_triceps">Parallel Bar Dips</string>
    <string name="exercise_dips_barres_paralleles_triceps_description">Exercise for triceps</string>
    <string name="exercise_ecartes_decline_avec_halteres">Decline Dumbbell Flyes</string>
    <string name="exercise_ecartes_decline_avec_halteres_description">Exercise for chest</string>
    <string name="exercise_extensions_des_mollets_avec_partenaire">Calf Raises with Partner</string>
    <string name="exercise_extensions_des_mollets_avec_partenaire_description">Exercise for calves</string>
    <string name="exercise_extension_des_mollets_donkey">Donkey Calf Raises</string>
    <string name="exercise_extension_des_mollets_donkey_description">Exercise for calves</string>
    <string name="exercise_face_pull">Face Pull</string>
    <string name="exercise_face_pull_description">Exercise for shoulders</string>
    <string name="exercise_good_morning_ischio_cuisses_fessiers">Good Morning</string>
    <string name="exercise_good_morning_ischio_cuisses_fessiers_description">Exercise for hamstrings and glutes</string>
    <string name="exercise_leg_curl_allonge_cuisses_ischios">Lying Leg Curls</string>
    <string name="exercise_leg_curl_allonge_cuisses_ischios_description">Exercise for thighs and hamstrings</string>
    <string name="exercise_pecs_decline">Decline Bench Press</string>
    <string name="exercise_pecs_decline_description">Exercise for chest</string>
    <string name="exercise_presse_a_cuisses_inclinee">Incline Leg Press</string>
    <string name="exercise_presse_a_cuisses_inclinee_description">Exercise for thighs</string>
    <string name="exercise_releve_jambes_chaise_romaine_abdominaux">Leg Raises</string>
    <string name="exercise_releve_jambes_chaise_romaine_abdominaux_description">Exercise for abdominals</string>
    <string name="exercise_roulette_abdominaux">Ab Roller</string>
    <string name="exercise_roulette_abdominaux_description">Exercise for abdominals</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="confirmation_message">Are you sure you want to delete the account?</string>
    <string name="confirmation_yes">Yes</string>
    <string name="confirmation_no">No</string>
    <string name="modifications_save_success">Modifications saved with success</string>
    <string name="account_deleted_successfully">Account deleted successfully</string>
    <string name="toast_logout">Logout successful</string>
    <string name="not_matching_password">Passwords do not match</string>
    <string name="login_successfull">Login successfull</string>
    <string name="invalid_email_or_password">"Invalid email or password "</string>
    <string name="fill_set_and_reps">Please fill sets and reps\n</string>
    <string name="user_registered_successfully">User registered succesfully</string>
    <string name="error_registering_user">Error registering_user</string>


</resources>