<!-- register_fragment.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editTextUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_below="@id/editTextEmailRegister"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/editTextUsernameRegister"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editTextConfirmPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/editTextPasswordRegister"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/editTextConfirmPasswordRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

</RelativeLayout>
