<!-- login_fragment.xml -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/username_hint"
                android:autofillHints="username"
                android:inputType="text"
                android:layout_margin="5dp"
                />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textEmailAddress"
                android:autofillHints="test@domain.com"
                android:hint="@string/email_hint"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/password_hint"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/confirm_password_hint"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_margin="5dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_margin="5dp"/>

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/languages"
                android:layout_margin="5dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/buttonDeleteAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_account"
                android:layout_margin="5dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>



